--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Best Motherfucking Website</title>
+<title>Chaostreff Alzey</title>
 <head> 
     <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
