--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 	</ul>
 	
 	<h2>Zur Website</h2>
-	<p>Das Design ist angelehnt an <a href="bestmotherfucking.website">dieses</a> Meisterwerk. Der <a href="https://github.com/chaostreff-alzey/chaostreff-alzey.github.io">Qeullcode</a> dieser Website ist auf Github vefügbar.</p>
+	<p>Das Design ist angelehnt an <a href="https://bestmotherfucking.website">dieses</a> Meisterwerk. Der <a href="https://github.com/chaostreff-alzey/chaostreff-alzey.github.io">Qeullcode</a> dieser Website ist auf Github vefügbar.</p>
 </body>
