--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Chaostreff Alzey</title>
 <head> 
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
 	<header>
@@ -14,12 +14,12 @@
 	<h2>Wer wir sind</h2>
 	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. Als lockere Gruppe treffen wir uns um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
-    <ul>
+	<ul>
 		<li>Unsere <a href="Satzung.html">Satzung</a>
 		<li>Unsere <a href="Gebuehrenordnung.html">Gebührenordnung</a>
 		<li>Die <a href="https://www.ccc.de/de/hackerethik">Hackerethik</a>
 	</ul>
 	
 	<h2>Zur Website</h2>
-	<p>Das Design ist angelehnt an <a href="https://bestmotherfucking.website">dieses</a> Meisterwerk. Der <a href="https://github.com/chaostreff-alzey/chaostreff-alzey.github.io">Qeullcode</a> dieser Website ist auf Github vefügbar.</p>
+	<p>Das Design ist angelehnt an <a href="https://bestmotherfucking.website">dieses</a> Meisterwerk. Der <a href="https://github.com/chaostreff-alzey/chaostreff-alzey.github.io">Quellcode</a> dieser Website ist auf Github vefügbar.</p>
 </body>
