--- a/Gebuehrenordnung.html
+++ b/Gebuehrenordnung.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html> 
+<html lang="de"> 
+<meta charset="utf-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head> 
     <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
