Seitenlogo ist jetzt eine SVG-Datei.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h1>Chaostreff Alzey <img src="img/Chaosknoten.jpg" alt="Logo des CCC" height=55px style="float:right; cursor:default; border:0"></h1>
+		<h1>Chaostreff Alzey <img src="img/Chaosknoten.svg" alt="Logo des CCC" height=55px style="float:right; cursor:default; border:0"></h1>
 	</header>
 	
 	<h2>Wer wir sind</h2>
