SVG-Datei ist jetzt uniform schwarz. Es gibt jetzt ein Fallback für veraltete Browser.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h1>Chaostreff Alzey <img src="img/Chaosknoten.svg" alt="Logo des CCC" height=55px style="float:right; cursor:default; border:0"></h1>
+		<h1>Chaostreff Alzey  <object type="image/svg+xml" data="img/Chaosknoten.svg" height=55px class="logo">Logo des CCC</object> </h1>
 	</header>
 	
 	<h2>Wer wir sind</h2>
