--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<h1>Chaostreff Alzey <img src="img/Chaosknoten.jpg" alt="Logo des CCC" height=55px style="float:right; cursor:default; border:0"></h1>
 	</header>
 	
+	<h2>Unser nächstes Treffen:</h2>
+	<p>15.06.2019, Alzeyer Kaffeehaus</p>
+	
 	<h2>Wer wir sind</h2>
 	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. Als lockere Gruppe treffen wir uns um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
