--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</header>
 	
 	<h2>Unser nächstes Treffen:</h2>
-	<p>15.06.2019, Alzeyer Kaffeehaus</p>
+	<p>15.06.2019 12:00 - 14:00, Alzeyer Kaffeehaus</p>
 	
 	<h2>Wer wir sind</h2>
 	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. Als lockere Gruppe treffen wir uns um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
