--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	
 	<h2>Wer wir sind</h2>
 	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. Als lockere Gruppe treffen wir uns um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
+	<p>Wir treffen uns am 1. Sonntag jedes Monats in der Allevitischen Gemeinde (Bahnhofstraße 26).</p>
 	<p>Die wichtigsten Links:
 	<ul>
 		<li>Unsere <a href="Satzung.html">Satzung</a>
