--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	</header>
 	
 	<h2>Wer wir sind</h2>
-	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
+	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. </p>
+	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
 	<ul>
 		<li>Unsere <a href="Satzung.html">Satzung</a>
