--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 	</header>
 	
 	<h2>Wer wir sind</h2>
-	<p>Der Chaostreff Alzey ist ein Ortsverein des Chaos Computer Club e.V. </p>
-	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
+	<p>Der Chaostreff Alzey ist eine sich dem Chaos Computer Club nahefühlende Gruppe.</p>
+	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats im [Juku Alzey](https://www.openstreetmap.org/#map=18/49.74393/8.11683) um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
 	<ul>
-		<li>Unsere <a href="Satzung.html">Satzung</a>
-		<li>Unsere <a href="Gebuehrenordnung.html">Gebührenordnung</a>
 		<li>Die <a href="https://www.ccc.de/de/hackerethik">Hackerethik</a>
 	</ul>
 	
