--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h1>Chaostreff Alzey  <object type="image/svg+xml" data="img/Chaosknoten.svg" height=55px class="logo">Logo des CCC</object> </h1>
+		<h1>Chaostreff Alzey</h1>
 	</header>
 	
 	<h2>Wer wir sind</h2>
