--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats von 15:00 bis 17:00 Uhr im <a href="https://www.openstreetmap.org/#map=18/49.74393/8.11683">Juku Alzey</a> um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
 	<ul>
-		<li>Die <a href="https://www.ccc.de/de/hackerethik">Hackerethik</a>
+		<li>Die <a href="https://www.ccc.de/de/hackerethik">Hackerethik</a></li>
+		<li><a href="mailto:kontakt@chaostreff-alzey.de">Kontakt</a></li>
 	</ul>
 	
 	<h2>Zur Website</h2>
