--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<h2>Wer wir sind</h2>
 	<p>Der Chaostreff Alzey ist eine sich dem Chaos Computer Club nahefühlende Gruppe.</p>
-	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats von 15:00 bis 17:00 Uhr im <a href="https://www.openstreetmap.org/#map=18/49.74393/8.11683">Juku Alzey</a> um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
+	<p>Als lockere Gruppe treffen wir uns am 1. Sonntag des Monats von 15:00 bis 17:00 Uhr <s>im <a href="https://www.openstreetmap.org/#map=18/49.74393/8.11683">Juku Alzey</a></s> (momentan auf Mumble) um Neuigkeiten aus der Welt der Informatik zu besprechen, sowie um gemeinsam an Projekten zu arbeiten.</p>
 	<p>Die wichtigsten Links:
 	<ul>
 		<li>Die <a href="https://www.ccc.de/de/hackerethik">Hackerethik</a></li>
